Все строки перенесены в strings.xml

--- a/app/src/main/res/layout/choose_period_dialog.xml
+++ b/app/src/main/res/layout/choose_period_dialog.xml
@@ -10,17 +10,17 @@
         android:background="@color/orange">
 
         <TextView
-            android:text="Начальная дата"
+            android:id="@+id/choose_period_starting_date_textview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            android:layout_weight="1"
-            android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textSize="18sp"
-            android:textStyle="normal|bold"
-            android:textColor="@android:color/white"
             android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp" />
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:text="@string/choose_period_starting_date_textview_string"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="normal|bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -152,17 +152,17 @@
         android:background="#FF9800">
 
         <TextView
-            android:text="Конечная дата"
+            android:id="@+id/choose_period_ending_date_textview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView4"
-            android:layout_weight="1"
-            android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:textStyle="normal|bold"
             android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp" />
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:text="@string/choose_period_ending_date_textview_string"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="normal|bold" />
     </LinearLayout>
 
     <LinearLayout
